--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,5 +1,86 @@
 <!-- start custom head snippets -->
 
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
->custom
+
+<head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge;IE=11;IE=10;IE=9;IE=8">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-9125124-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-9125124-1');
+</script>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-V7EM7S1G2Z"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-V7EM7S1G2Z');
+</script>
+
+
+
+    <title>Ana Marie's Bridal | Jefferson City</title><meta name="description" content="Welcome to Ana Marie's Bridal. Use this page to help find out more about us and what we can offer you on your big day!" /><meta name="keywords" content="wedding dresses in Jefferson City Missouri, wedding dresses in Cole County, wedding dresses in Missouri, bridal gowns in Jefferson City Missouri, bridal gowns in Cole County, bridal gowns in Missouri, MidMo wedding dresses" />
+	<meta property="og:url" content="https://www.anamariesbridal.com" />
+	<meta property="og:title" content="ANA MARIES BRIDAL" />
+    <meta property="og:site_name" content="anamariesbridal.com" />
+    <meta property="og:image" content="https://www.anamariesbridal.com/images/og/banner.jpg" />
+    <meta property="og:image:width" content="1100" />
+    <meta property="og:image:height" content="650" />
+	<meta property="og:description" content="Ana Marie's Bridal is a mid Missouri boutique for designer wedding gowns and bridesmaid dresses" />
+    <meta property="og:type" content="website" />
+    <meta name="distribution" content="Global" />
+    <meta name="robots" content="index,follow,noodp">
+    <meta name="copyright" content="Copyright © 2015-2025 Ana Marie's Bridal. All Rights Reserved." />
+    <meta name="author" content="ANA MARIES BRIDAL" />
+    <meta name="theme-color" content="#49265d" />
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
+   
+    <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" /> -->
+	 <!-- favicon -->
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/ico/apple-touch-icon-144-precomposed.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png" />
+    <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png" />
+	<link rel="Shortcut icon" href="images/ico/favicon.ico" />
+    <link rel="Bookmark" href="images/ico/favicon.ico" />
+    <link rel="bookmark" href="images/ico/favicon.ico" type="image/ico" />
+    <!-- favicon end -->
+    <!-- <link href="https://www.jasminebridal.com/css/reset.min.css" rel="stylesheet" />
+    <link href="https://www.jasminebridal.com/css/jquery-ui.min.css" rel="stylesheet" />
+    <link href="https://www.jasminebridal.com/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://www.jasminebridal.com/css/font-awesome.min.css" rel="stylesheet" />
+    <link href="https://www.jasminebridal.com/css/animate.min.css" rel="stylesheet" />
+    <link href="https://www.jasminebridal.com/css/owl.carousel.min.css" rel="stylesheet" />
+    <link href="https://www.jasminebridal.com/css/owl.theme.default.min.css" rel="stylesheet" />
+    <link href="https://www.jasminebridal.com/css/layout.css" rel="stylesheet" type="text/css" />
+    <link href="https://www.jasminebridal.com/css/mobile.css" rel="stylesheet" type="text/css" /> -->
+    <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap" rel="stylesheet"> -->
+    <link href="css/all_layout.css" rel="stylesheet" />
+	<!-- <script>window.jQuery||document.write('<script src="https://www.jasminebridal.com/js/jquery-1.12.4.min.js">\x3c/script>');</script> -->
+	<!-- <script src="js/jquery-1.10.1.js"></script> -->
+    <!-- <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
+	<script src="https://www.jasminebridal.com/js/jquery-ui.js"></script>
+    <script src="https://www.jasminebridal.com/js/bootstrap.min.js"></script>
+    <script src="https://www.jasminebridal.com/js/jquery.lazyload.js"></script>
+    <script src="https://www.jasminebridal.com/js/owl.carousel.js"></script>
+    <script src="https://www.jasminebridal.com/js/wow.min.js"></script> -->
+    <script src="js/vender.min.js"></script>
+    <script>new WOW().init();</script>
+    <link rel="canonical" href="https://www.jasminebridal.com/product_category_ck.asp?id1=7&depth=1" />
+    <link href="css/all_index.css" rel="stylesheet" />
+    <link href="css/editor.min.css" rel="stylesheet" />
+	
+</head>
+
+
 <!-- end custom head snippets -->
