--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -3,8 +3,7 @@
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
 
 <head>
-    <title>Ana Marie's Bridal | Jefferson City</title><meta name="description" content="Welcome to Ana Marie's Bridal. Use this page to help find out more about us and what we can offer you on your big day!" /><meta name="keywords" content="wedding dresses in Jefferson City Missouri, wedding dresses in Cole County, wedding dresses in Missouri, bridal gowns in Jefferson City Missouri, bridal gowns in Cole County, bridal gowns in Missouri, MidMo wedding dresses" />
-	
+    <title>Ana Marie's Bridal | Jefferson City</title>
    
 	 <!-- favicon -->
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/ico/apple-touch-icon-144-precomposed.png" />
