--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -2,13 +2,7 @@
 
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
 
-<head>
-    <title>Ana Marie's Bridal | Jefferson City</title>
-   
-	
-
-	
-</head>
+<b> updated</b>
 
 
 <!-- end custom head snippets -->
