--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -2,6 +2,12 @@
 # Only the main Sass file needs front matter (the dashes are enough)
 search: false
 ---
+6$serif              : "PT Serif", Georgia, Times, serif;
+$sans-serif-narrow  : "PT Sans Narrow", -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif;
+
+$global-font-family : $serif;
+$header-font-family : $sans-serif-narrow;
+
 
 @charset "utf-8";
 
