--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -2,7 +2,7 @@
 # Only the main Sass file needs front matter (the dashes are enough)
 search: false
 ---
-6$serif              : "PT Serif", Georgia, Times, serif;
+$serif              : "PT Serif", Georgia, Times, serif;
 $sans-serif-narrow  : "PT Sans Narrow", -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif;
 
 $global-font-family : $serif;
