--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,3 +1,8 @@
 <!-- start custom footer snippets -->
 <h1> find us</h1>
+
+<address>
+  223 High Street<br /> Jefferson City, MO 65101<br /> phone
+</address>
+
 <!-- end custom footer snippets -->
