--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <div class="page__footer-follow">
   <ul class="social-icons">
     {% if site.data.ui-text[site.locale].follow_label %}
-      <li><strong>{{ site.data.ui-text[site.locale].follow_label }}</strong></li>
+      <li><center><strong>{{ site.data.ui-text[site.locale].follow_label }}</strong></center></li>
     {% endif %}
 
     {% if site.footer.links %}
